Fixed notices visibility

--- a/src/styles/loader.css
+++ b/src/styles/loader.css
@@ -8,8 +8,8 @@
     animation: spin 2s linear infinite;
     z-index: 100000;
     position: absolute;
-    top: 45%;
-    left: 47.45%;
+    top: 40%;
+    left: 45%;
     box-shadow: 0px 0px 20px 3px rgba(176, 176, 176, 0.79);
     opacity: 0.5
   }
